# rust-compiler-construction

./: README.md
bencher/: Cargo.toml
bencher/src/: main.rs
compiler/: Cargo.toml
compiler/src/passes/assign/: include_liveness.rs  mod.rs
compiler/src/passes/atomize/: mod.rs
compiler/src/passes/conclude/: conclude.rs
compiler/src/passes/eliminate/: eliminate_params.rs
compiler/src/passes/emit/: binary.rs  mod.rs  push_pop.rs
compiler/src/passes/parse/: grammar.lalrpop  mod.rs
compiler/src/passes/patch/: patch.rs
compiler/src/passes/reveal/: mod.rs
compiler/src/passes/select/: macros.rs  mod.rs  select.rs
compiler/src/passes/validate/: check_sized.rs  error.rs  mod.rs  resolve.rs
compiler/src/passes/validate/constrain/: expr.rs  mod.rs  variant.rs
compiler/src/passes/validate/uniquify/: expr.rs  typedef.rs
compiler/tests/: aoc.rs  integration.rs
programs/good/algebraic/: simple_enum.sp  simple_enum_construct.sp
