[package]
name = "bencher"
version = "0.1.0"
edition = "2021"
authors = ["joooooooonaaaaa", "juuuuuuuuuuuuuuuuuuliaaaaaaaaaa"]

[dependencies]
itertools = "0.12.1"
pathdiff = "0.2.1"
tempdir = "0.3.7"
walkdir = "2.5.0"
clap = "4.5.4"
git2 = "0.18.3"
compiler = { path = "../compiler" }
serde = { version = "1.0.198", features = ["derive"] }
mongodb = { version = "2.8.2", default-features = false, features = ["sync"]}
